--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -61,13 +61,6 @@ body{
   border-radius: 3px;
   background-color: rgb(255, 255, 255);
 }
-input{
-  border: none;
-  background: none;
-}
-input:focus{
-  outline: none;
-}
 .ipfname{
   width: min-content;
   font-size: 42px;
@@ -106,4 +99,94 @@ input:focus{
 }
 .desc{
   font-size: 15px;
+}
+.popup-education{
+  position: absolute;
+  top: -100px;
+  left: 45%;
+  height: 500px;
+  width: 620px;
+  z-index: 2;
+  background-color: white;
+  border: 2px solid black;
+  border-radius: 5px;
+} 
+
+.popup-edu{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  width: 100%;
+  /* background-color: rgb(96, 165, 211); */
+  height: 60px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  border-bottom: 1px solid black;
+  /* opacity: 1 !important; */
+}
+
+.formContainer{
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 300px;
+  width: 600px;
+  margin-left: 3%;
+  margin-top: 10%;
+  padding: 10px;
+  /* border-bottom: 1px solid black; */
+}
+.Degree{
+  display: flex;  
+  font-size: 20px;
+  display: block-inline;
+  margin: 10px;
+}
+.popup_edu_field{
+  width: 160px;
+  height: 20px;
+}
+.Degree input{
+  display: inline;
+  width: 400px;
+  height: 40px;
+  border: transparent;
+  background-color: rgb(223, 219, 219);
+  border-radius: 5px;
+  text-align: center;
+  outline: none;
+}
+
+.Degree input:focus{
+  border-bottom: 3px solid gray;
+}
+
+.closebtn{
+  position: absolute;
+  background-color: white;
+  right: 0;
+  top: 0;
+  height: 30px;
+}
+.popup_edu_save{
+  position: absolute;
+  right: 40px;
+  top: 385px;
+  font-size: 20px;
+  height: 35px;
+  background-color: #440ccc;
+  color: white;
+  width: 80px;
+}
+.popup_edu_cancel{
+  position: absolute;
+  right: 140px;
+  top: 385px;
+  font-size: 20px;
+  height: 35px;
+  background-color:white;
+  border: 1px solid grey;
+  /* color: white; */
+  width: 80px;
 }
