--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,109 +1,186 @@
-*{
-  margin: 0px;
-  padding: 0px;
+* {
+	margin: 0px;
+	padding: 0px;
 }
-body{
-  /* background-color: #f8f8fa; */
-  background-color: #d9e8f9;
+
+body {
+	/* background-color: #f8f8fa; */
+	background-color: #d9e8f9;
 }
-.nav{
-  width: 100%;
-  background-color: rgb(16, 44, 121);
-  height: 60px;
-  position:fixed;
-  z-index: 2;
-  top: 0px;
-  display: flex;
-  font-size: 18px;
-  color: white;
+
+.nav {
+	width: 100%;
+	background-color: rgb(16, 44, 121);
+	height: 60px;
+	position: fixed;
+	z-index: 2;
+	top: 0px;
+	display: flex;
+	font-size: 18px;
+	color: white;
 }
-.mainpage{
-  /* background-color: aqua; */
-  margin-top: 100px !important;
-  margin-bottom: 40px;
+
+.mainpage {
+	/* background-color: aqua; */
+	margin-top: 100px !important;
+	margin-bottom: 40px;
 }
-.mainpage::-webkit-scrollbar{
-  display: none;
+
+.navbs {
+	margin: 5px;
+	padding: 15px;
+	text-align: center;
 }
-.ResumePage::-webkit-scrollbar{
-  display: none;
+
+.signinas {
+	position: absolute;
+	right: 8%;
+	top: 20px;
 }
-.navbs{
-  margin: 5px;
-  padding: 15px;
-  text-align: center;
+
+.user_name {
+	position: absolute;
+	right: 2%;
+	top: 20px;
 }
-.signinas{
-  position: absolute;
-  right:8%;
-  top: 20px;
-}
-.user_name{
-  position: absolute;
-  right: 2%;
-  top: 20px;
-}
-.template_name{
-  position: absolute;
-  top: 20px;
-  left: 50%;
-  transform: translate(-50%,0%);
+
+.template_name {
+	position: absolute;
+	top: 20px;
+	left: 50%;
+	transform: translate(-50%, 0%);
 }
 
 /* for resume page that will be generated */
-.ResumePage{
-  margin-left: 50%;
-  margin-top: 40px;
-  transform: translate(-50%,0%);
-  border: 1px solid rgb(197, 197, 197);
-  width: 21cm;
-  height: 29.7cm;  
-  border-radius: 3px;
-  background-color: rgb(255, 255, 255);
+.ResumePage {
+	margin-left: 50%;
+	margin-top: 40px;
+	transform: translate(-50%, 0%);
+	border: 1px solid rgb(197, 197, 197);
+	width: 21cm;
+	height: 29.7cm;
+	border-radius: 3px;
+	background-color: rgb(255, 255, 255);
 }
-input{
-  border: none;
-  background: none;
+
+.ipfname {
+	width: min-content;
+	font-size: 42px;
+	text-align: center;
+	padding: 10px 0px 0px 40px;
+	border: none;
 }
-input:focus{
-  outline: none;
+.ipfname:focus{
+	outline: none;
 }
-.ipfname{
-  width: min-content;
-  font-size: 42px;
-  text-align: center;
-  padding: 10px 0px 0px 40px;
+.ipfph {
+	width: min-content;
+	text-align: right;
+	margin-right: 10px;
+	padding: 0px 0px;
+	margin-bottom: 15px;
+	border: none;
 }
-.ipfph{
-  width: min-content;
-  text-align: right;
-  margin-right: 10px;
-  padding: 0px 0px;
-  margin-bottom: 15px;
+.ipfph:focus{
+	outline: none;
 }
-.ipfem{
-  width: min-content;
-  text-align: left;
-  margin-left: 10px;
-  padding: 0px 0px;
+.ipfem {
+	width: min-content;
+	text-align: left;
+	margin-left: 10px;
+	padding: 0px 0px;
+	border: none;
 }
-.education{
-  position: absolute;
-  top: 10%;
-  left: 5%;
-  font-size: 25px;
+.ipfem:focus{
+	outline: none;
 }
-.ipfh{
-  font-size: 18px;
-  padding-bottom: 8px;
+.education {
+	position: relative;
+	top: 3%;
+	left: 5%;
+	font-size: 25px;
 }
-.ipfh::placeholder{
-  color: black;
+
+.Links{
+	position: relative;
+	top: 6%;
+	left: 5%;
+	font-size: 25px;
 }
-.eds{
-  font-size: 16px;
-  padding-bottom: 4px;
+
+.language{
+	position: relative;
+	top: 9%;
+	left: 5%;
+	font-size: 25px;
 }
-.desc{
-  font-size: 15px;
+
+.ipfh {
+	font-size: 18px;
+	padding-bottom: 10px;
+	text-align: center;
+	transform: translate(-3%,0%);
+}
+
+.ipfh::placeholder {
+	color: black;
+}
+
+.eds {
+	margin-top: 0px;
+	padding-top: 5px;
+	font-size: 16px;
+	max-width: 350px;
+}
+
+.desc {
+	margin-bottom: 4px;
+	font-size: 15px;
+	width: 350px;
+}
+
+.plats{
+	font-size: 16px;
+}
+
+.plats a{
+	text-decoration: none;
+	color: black;
+}
+
+.Achievements{
+	position: relative;
+	top: 12%;
+	left: 5%;
+	font-size: 25px;
+}
+
+.Skills{
+	position: relative;
+	top: 15%;
+	left: 5%;
+	font-size: 25px;
+}
+
+.lis{
+	position: relative;
+	left: 2%;
+	font-size: 16px;
+}
+
+.skill{
+	font-size: 16px;
+	display: flex;
+}
+.skill div{
+	padding: 5px 15px;
+	margin: 5px 5px;
+	background-color: rgb(0, 0, 66);
+	border-radius: 12px;
+	color: white;
+}
+.field{
+	position: relative;
+	top: 18%;
+	left: 5%;
 }
