--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -32,6 +32,14 @@ body{
 	padding: 15px;
 	text-align: center;
 }
+.navbar{
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 60px;
+  z-index: 1;
+  background-color: white !important;
+}
 
 .signinas {
 	position: absolute;
@@ -190,9 +198,10 @@ body{
 	left: 5%;
 }
 .popup-education{
-  position: absolute;
-  top: -100px;
-  left:6%;
+  position: fixed;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   height: 400px;
   width: 620px;
   z-index: 2;
@@ -264,7 +273,7 @@ body{
 .popup_edu_save{
   position: absolute;
   right: 40px;
-  bottom: 0;
+  bottom: -20px;
   font-size: 20px;
   height: 35px;
   background-color: #440ccc;
@@ -274,11 +283,26 @@ body{
 .popup_edu_cancel{
   position: absolute;
   right: 140px;
-  bottom: 0;
+  bottom: -20px;
   font-size: 20px;
   height: 35px;
   background-color:white;
   border: 1px solid grey;
   /* color: white; */
   width: 80px;
+}
+
+.popuplinkfield input{
+  font-size: 18px;
+  text-align: center;
+  height: 30px;
+  margin-right: 15px;
+  margin-left: 15px;
+  background-color: #dfdbdb;
+}
+.linkname{
+  width: 150px;
+}
+.linklink{
+  width: 350px;
 }
