--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,7 +4,6 @@
 }
 
 body {
-	/* background-color: #f8f8fa; */
 	background-color: #d9e8f9;
 }
 
@@ -21,7 +20,6 @@ body {
 }
 
 .mainpage {
-	/* background-color: aqua; */
 	margin-top: 100px !important;
 	margin-bottom: 40px;
 }
@@ -50,7 +48,6 @@ body {
 	left: 50%;
 	transform: translate(-50%, 0%);
 }
-
 /* for resume page that will be generated */
 .ResumePage {
 	margin-left: 50%;
@@ -67,7 +64,7 @@ body {
 	width: min-content;
 	font-size: 42px;
 	text-align: center;
-	padding: 10px 0px 0px 40px;
+	padding: 10px 0px 0px 0px;
 	border: none;
 }
 .ipfname:focus{
@@ -75,8 +72,8 @@ body {
 }
 .ipfph {
 	width: min-content;
-	text-align: right;
-	margin-right: 10px;
+	text-align: left;
+	margin-left: 10px;
 	padding: 0px 0px;
 	margin-bottom: 15px;
 	border: none;
@@ -86,8 +83,8 @@ body {
 }
 .ipfem {
 	width: min-content;
-	text-align: left;
-	margin-left: 10px;
+	text-align: right;
+	margin-right: 10px;
 	padding: 0px 0px;
 	border: none;
 }
@@ -95,23 +92,16 @@ body {
 	outline: none;
 }
 .education {
-	position: relative;
-	top: 3%;
-	left: 5%;
 	font-size: 25px;
+	padding: 0px 0px 30px 0px;
 }
 
 .Links{
-	position: relative;
-	top: 6%;
-	left: 5%;
 	font-size: 25px;
+	padding: 0px 0px 30px 0px;
 }
 
 .language{
-	position: relative;
-	top: 9%;
-	left: 5%;
 	font-size: 25px;
 }
 
@@ -134,17 +124,21 @@ body {
 	margin-top: 0px;
 	padding-top: 5px;
 	font-size: 16px;
-	max-width: 350px;
+	padding-left: 5%;
+	padding-right: 5%;
 }
 
 .desc {
 	margin-bottom: 4px;
 	font-size: 15px;
-	width: 350px;
+	padding-left: 5%;
+	padding-right: 5%;
 }
 
 .plats{
 	font-size: 16px;
+	padding-left: 5%;
+	padding-right: 5%;
 }
 
 .plats a{
@@ -153,28 +147,26 @@ body {
 }
 
 .Achievements{
-	position: relative;
-	top: 12%;
-	left: 5%;
 	font-size: 25px;
+	padding: 0px 0px 30px 0px;
 }
 
 .Skills{
-	position: relative;
-	top: 15%;
-	left: 5%;
 	font-size: 25px;
+	padding: 0px 0px 30px 0px;
 }
 
 .lis{
 	position: relative;
-	left: 2%;
+	left: 8%;
 	font-size: 16px;
+	padding-right: 5%;
 }
 
 .skill{
 	font-size: 16px;
 	display: flex;
+	padding-left: 5%;
 }
 .skill div{
 	padding: 5px 15px;
@@ -184,9 +176,8 @@ body {
 	color: white;
 }
 .field{
-	position: relative;
-	top: 18%;
-	left: 5%;
+	padding-left: 0px;
+	padding: 0px 0px 30px 0px;
 }
 .popup-education{
   position: absolute;
