--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,15 +1,9 @@
-
-
 *{
   margin: 0px;
   padding: 0px;
 }
-
-body {
-	background-color: #d9e8f9;
 body{
-  /* background-color: #f8f8fa; */
-
+  background-color: #f8f8fa;
 }
 
 .nav {
