--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -220,7 +220,8 @@ body{
 	outline: none;
 }
 .field{
-	position: relative;
+	position: relativ
+  e;
 	top: 18%;
 	left: 5%;
 }
@@ -360,4 +361,10 @@ body{
 .popup_other_field input{
 	width: 160px;
   	height: 80px;
+}
+
+.achievement{
+  width: 560px;
+  height: 250px;
+  background-color: #dfdbdb;
 }
