--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,10 +4,6 @@
   margin: 0px;
   padding: 0px;
 }
-body{
-  /* background-color: #f8f8fa; */
-
-}
 
 .nav {
 	width: 100%;
@@ -83,8 +79,8 @@ body{
 }
 .ipfph {
 	width: min-content;
-	text-align: right;
-	margin-right: 10px;
+	text-align: left;
+	margin-left: 10px;
 	padding: 0px 0px;
 	margin-bottom: 15px;
 	border: none;
@@ -94,8 +90,8 @@ body{
 }
 .ipfem {
 	width: min-content;
-	text-align: left;
-	margin-left: 10px;
+	text-align: right;
+	margin-right: 10px;
 	padding: 0px 0px;
 	border: none;
 }
@@ -105,21 +101,21 @@ body{
 .education {
 	position: relative;
 	top: 3%;
-	left: 5%;
+	/* left: 5%; */
 	font-size: 25px;
 }
 
 .Links{
 	position: relative;
 	top: 6%;
-	left: 5%;
+	/* left: 5%; */
 	font-size: 25px;
 }
 
 .language{
 	position: relative;
 	top: 9%;
-	left: 5%;
+	/* left: 5%; */
 	font-size: 25px;
 }
 
@@ -139,15 +135,17 @@ body{
 }
 
 .eds {
-	margin-top: 0px;
+	margin-left: 50px;
 	padding-top: 5px;
 	font-size: 16px;
 	max-width: 350px;
 }
 
-.desc {
+.dis {
 	font-size: 13px;
+	margin-left: 50px;
 	width: 350px;
+
 }
 .degree{
   font-size: 13px;
@@ -168,27 +166,27 @@ body{
 .Achievements{
 	position: relative;
 	top: 12%;
-	left: 5%;
+	/* left: 5%; */
 	font-size: 25px;
 }
 
 .Skills{
 	position: relative;
 	top: 15%;
-	left: 5%;
+	/* left: 5%; */
 	font-size: 25px;
 	padding: 0px 0px 40px 0px;
 }
 
 .lis{
 	position: relative;
-	left: 2%;
+	margin-left: 50px;
 	font-size: 16px;
 }
 
 .skill{
 	font-size: 16px;
-	padding-left: 5%;
+	margin-left: 50px;
 	padding-right: 5%;
 }
 .skill-item{
@@ -222,7 +220,7 @@ body{
 .field{
 	position: relative;
 	top: 18%;
-	left: 5%;
+	/* left: 5%; */
 }
 .popup-education{
   position: fixed;
