--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -18,7 +18,6 @@
 }
 
 .mainpage {
-	/* background-color: aqua; */
 	margin-top: 100px !important;
 	margin-bottom: 40px;
 }
@@ -34,7 +33,6 @@
   width: 100%;
   height: 60px;
   z-index: 1;
-  /* z-index: 1; */
   background-color: white !important;
 }
 
@@ -71,7 +69,7 @@
 	width: min-content;
 	font-size: 42px;
 	text-align: center;
-	padding: 10px 0px 0px 40px;
+	padding: 10px 0px 0px 20px;
 	border: none;
 }
 .ipfname:focus{
@@ -153,6 +151,7 @@ li {
 
 .plats{
 	font-size: 16px;
+	margin-left: 50px;
 }
 
 .plats a{
